div with id content

--- a/UI/public/index.html
+++ b/UI/public/index.html
@@ -6,5 +6,8 @@
     <link rel="stylesheet" href="style.css" />
     <title>EMS System 2.0</title>
   </head>
-  <body></body>
+  <body>
+    <div id="content"></div>
+    <style></style>
+  </body>
 </html>
