Adding link of generated bundles

--- a/UI/public/index.html
+++ b/UI/public/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="content"></div>
+    <script src="/app.bundle.js"></script>
+    <script src="/vendor.bundle.js"></script>
     <style></style>
   </body>
 </html>
